// Copyright 2021 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
import {describe, it, expect, beforeEach, vi} from 'vitest';

import {GitHub} from '../../src/github';
import {Ruby} from '../../src/strategies/ruby';
import {assertHasUpdate, buildGitHubFileRaw} from '../helpers';
import {buildMockConventionalCommit} from '../helpers';
import {TagName} from '../../src/util/tag-name';
import {Version} from '../../src/version';
import {Changelog} from '../../src/updaters/changelog';
import {VersionRB} from '../../src/updaters/ruby/version-rb';
import {GemfileLock} from '../../src/updaters/ruby/gemfile-lock';
import {PullRequestBody} from '../../src/util/pull-request-body';

const GEM_NAME = 'google-cloud-automl-gem';

const GEMFILE_CONTENTS = `
Gem::Specification.new do |gem|
  gem.name = "${GEM_NAME}"
end
`;

const COMMITS = [
  ...buildMockConventionalCommit(
    'fix(deps): update dependency com.google.cloud:google-cloud-storage to v1.120.0'
  ),
  ...buildMockConventionalCommit(
    'fix(deps): update dependency com.google.cloud:google-cloud-spanner to v1.50.0'
  ),
  ...buildMockConventionalCommit('chore: update common templates'),
];

describe('Ruby', () => {
  let github: GitHub;
  beforeEach(async () => {
    github = await GitHub.create({
      owner: 'googleapis',
      repo: 'ruby-test-repo',
      defaultBranch: 'main',
    });

    const fileFilesStub = vi.spyOn(github, 'findFilesByGlobAndRef');
    fileFilesStub
      .withArgs('*.gemspec', 'main')
      .mockResolvedValue(['google-cloud-automl.gemspec']);

    const getFileContentsStub = vi.spyOn(github, 'getFileContentsOnBranch');
    getFileContentsStub
      .withArgs('google-cloud-automl.gemspec', 'main')
      .mockResolvedValue(buildGitHubFileRaw(GEMFILE_CONTENTS));
  });

    describe('buildReleasePullRequest', () => {
    it('returns release PR changes with defaultInitialVersion', async () => {
      const expectedVersion = '0.0.1';
      const strategy = new Ruby({
        targetBranch: 'main',
        github,
        component: 'google-cloud-automl',
      });
      const latestRelease = undefined;
      const release = await strategy.buildReleasePullRequest({
        commits: COMMITS,
        latestRelease,
      });
      expect(release!.version?.toString()).to.eql(expectedVersion);
    });
    it('returns release PR changes with semver patch bump', async () => {
      const expectedVersion = '0.123.5';
      const strategy = new Ruby({
        targetBranch: 'main',
        github,
        component: 'google-cloud-automl',
      });
      const latestRelease = {
        tag: new TagName(Version.parse('0.123.4'), 'google-cloud-automl'),
        sha: 'abc123',
        notes: 'some notes',
      };
      const release = await strategy.buildReleasePullRequest({
        commits: COMMITS,
        latestRelease,
      });
      expect(release!.version?.toString()).to.eql(expectedVersion);
    });
  });
  describe('buildUpdates', () => {
    it('builds common files', async () => {
      const strategy = new Ruby({
        targetBranch: 'main',
        github,
        component: 'google-cloud-automl',
      });
      const latestRelease = {
        tag: new TagName(Version.parse('0.123.4'), 'google-cloud-automl'),
        sha: 'abc123',
        notes: 'some notes',
      };
      const release = await strategy.buildReleasePullRequest({
        commits: COMMITS,
        latestRelease,
      });
      const updates = release!.updates;
      expect(updates).lengthOf(5).toMatchSnapshot();
      assertHasUpdate(updates, 'CHANGELOG.md', Changelog);
      assertHasUpdate(updates, 'lib/google/cloud/automl/version.rb', VersionRB);
      assertHasUpdate(
        updates,
        'sig/lib/google/cloud/automl/version.rbs',
        VersionRB
      );
      assertHasUpdate(
        updates,
        'rbi/lib/google/cloud/automl/version.rbi',
        VersionRB
      );

      const gemfileLockUpdate = assertHasUpdate(
        updates,
        'Gemfile.lock',
        GemfileLock
      );

      // gemfile lock updater should be able to update content that includes the gem name from
      // the gemspec file
      expect(
        gemfileLockUpdate.updater.updateContent(
          `${GEM_NAME} (${latestRelease.tag.version})`
        )
      ).to.eql(`${GEM_NAME} (${release!.version})`);
    });
    it('allows overriding version file', async () => {
      const strategy = new Ruby({
        targetBranch: 'main',
        github,
        component: 'google-cloud-automl',
        versionFile: 'lib/foo/version.rb',
      });
      const latestRelease = undefined;
      const release = await strategy.buildReleasePullRequest({
        commits: COMMITS,
        latestRelease,
      });
      const updates = release!.updates;
      expect(updates).lengthOf(5).toMatchSnapshot();
      assertHasUpdate(updates, 'CHANGELOG.md', Changelog);
      assertHasUpdate(updates, 'lib/foo/version.rb', VersionRB);
      assertHasUpdate(updates, 'sig/lib/foo/version.rbs', VersionRB);
      assertHasUpdate(updates, 'rbi/lib/foo/version.rbi', VersionRB);
      assertHasUpdate(updates, 'Gemfile.lock', GemfileLock);
    });
    // TODO: add tests for tag separator
    // TODO: add tests for post-processing commit messages
  });
  describe('buildRelease', () => {
    it('overrides the tag separator', async () => {
      const strategy = new Ruby({
        targetBranch: 'main',
        github,
        component: 'google-cloud-automl',
      });
      const release = await strategy.buildRelease({
        title: 'chore(main): release v1.2.3',
        headBranchName: 'release-please/branches/main',
        baseBranchName: 'main',
        number: 1234,
        body: new PullRequestBody([]).toString(),
        labels: [],
        files: [],
        sha: 'abc123',
      });
      expect(release, 'Release').to.not.be.undefined;
      expect(release!.tag.separator).to.eql('/');
    });
  });
});
