// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ruby > buildUpdates > allows overriding version file 1`] = `
[
  {
    "createIfMissing": true,
    "path": "CHANGELOG.md",
    "updater": Changelog {
      "changelogEntry": "## 0.0.1 (2026-05-19)


### Bug Fixes

* **deps:** update dependency com.google.cloud:google-cloud-spanner to v1.50.0 ([08ca011](https://github.com/googleapis/ruby-test-repo/commit/08ca01180a91c0a1ba8992b491db9212))
* **deps:** update dependency com.google.cloud:google-cloud-storage to v1.120.0 ([845db13](https://github.com/googleapis/ruby-test-repo/commit/845db1381b3d5d20151cad2588f85feb))",
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
      "versionHeaderRegex": /\\\\n###\\? v\\?\\[0-9\\[\\]/s,
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "lib/foo/version.rb",
    "updater": VersionRB {
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "rbi/lib/foo/version.rbi",
    "updater": VersionRB {
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "sig/lib/foo/version.rbs",
    "updater": VersionRB {
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "Gemfile.lock",
    "updater": GemfileLock {
      "gemName": "google-cloud-automl-gem",
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 0,
        "patch": 1,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
]
`;

exports[`Ruby > buildUpdates > builds common files 1`] = `
[
  {
    "createIfMissing": true,
    "path": "CHANGELOG.md",
    "updater": Changelog {
      "changelogEntry": "## [0.123.5](https://github.com/googleapis/ruby-test-repo/compare/google-cloud-automl-v0.123.4...google-cloud-automl/v0.123.5) (2026-05-19)


### Bug Fixes

* **deps:** update dependency com.google.cloud:google-cloud-spanner to v1.50.0 ([08ca011](https://github.com/googleapis/ruby-test-repo/commit/08ca01180a91c0a1ba8992b491db9212))
* **deps:** update dependency com.google.cloud:google-cloud-storage to v1.120.0 ([845db13](https://github.com/googleapis/ruby-test-repo/commit/845db1381b3d5d20151cad2588f85feb))",
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 123,
        "patch": 5,
        "preRelease": undefined,
      },
      "versionHeaderRegex": /\\\\n###\\? v\\?\\[0-9\\[\\]/s,
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "lib/google/cloud/automl/version.rb",
    "updater": VersionRB {
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 123,
        "patch": 5,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "rbi/lib/google/cloud/automl/version.rbi",
    "updater": VersionRB {
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 123,
        "patch": 5,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "sig/lib/google/cloud/automl/version.rbs",
    "updater": VersionRB {
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 123,
        "patch": 5,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
  {
    "createIfMissing": false,
    "path": "Gemfile.lock",
    "updater": GemfileLock {
      "gemName": "google-cloud-automl-gem",
      "version": Version {
        "build": undefined,
        "major": 0,
        "minor": 123,
        "patch": 5,
        "preRelease": undefined,
      },
      "versionsMap": undefined,
    },
  },
]
`;
